--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
        &emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>
        &emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/><br/><br/>
 
-       WHEN YOU ARE FUCK'INGLY IRRITATED OF<br/>
-       EVERYTHING BUT STILL WANT TO STUDY ;)<br/>
+       WhenYouAreFuck'inglyIrritatedOf<br/>
+       EverythingButStillWantToStudy ;)<br/>
        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&copy;~HARSH~
 
     
