--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
        &emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>
        &emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/>&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;**********************<br/><br/><br/>
 
-       WhenYouAreFuck'inglyIrritatedOf<br/>
-       EverythingButStillWantToStudy ;)<br/>
+       &emsp;WhenYouAreFuck'inglyIrritatedOf<br/>
+       &emsp;EverythingButStillWantToStudy ;)<br/>
        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&copy;~HARSH~
 
     
